# gradio-demo-component

./: .gitignore  README.md  demo.py  main.py
.codesandbox/: tasks.json
flagged/: log.csv
hellogradiocomponent/: README.md  pyproject.toml
hellogradiocomponent/backend/gradio_hellogradiocomponent/: __init__.py  hellogradiocomponent.py
hellogradiocomponent/backend/gradio_hellogradiocomponent/templates/component/: index.js  style.css
hellogradiocomponent/demo/: app.py
hellogradiocomponent/frontend/: package-lock.json  package.json
