[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_hellogradiocomponent"
version = "0.0.1"
description = "A demo to build a gradio custom component"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Ibrahim.H", email = "bitsnaps@yahoo.com" }]
keywords = ["gradio-custom-component", "gradio-template-Fallback", "demo", "custom component", "gradio"]
# Add dependencies here
dependencies = ["gradio>=4.0,<5.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_hellogradiocomponent/templates", "*.pyi", "backend/gradio_hellogradiocomponent/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_hellogradiocomponent"]
